src/objects/CFCU_Mastercard_Alerts__c.object
<CustomObject>
    <description>masterCard Alerts</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account_Details__c.RecType__c</field>
                <operation>equals</operation>
                <value>ACCT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Details__c</referenceTo>
        <relationshipName>CFCUMastercard_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlertChRecuring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlertChRecuring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrandName__c</fullName>
        <label>BrandName</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_description__c</fullName>
        <formula>if(AND(transbyInternetMobile__c,  alertCHInternetMobile__c ,transbyMailorTelephone__c,  alertCHMailOPhone__c ,transRecurr__c,  AlertChRecuring__c ),
        &apos;Mail/Phone Orders AND&apos;  + &apos; Recurring Charges , AND &apos;  + &apos; Internet/Mobile Transactions&apos;,
        if(AND(transbyInternetMobile__c,  alertCHInternetMobile__c , transbyMailorTelephone__c,  alertCHMailOPhone__c ), 
           &apos;Mail/Phone Orders AND&apos; + &apos; Internet/Mobile Transactions&apos;, 
           if(AND(transbyInternetMobile__c,  alertCHInternetMobile__c ,transRecurr__c,  AlertChRecuring__c ),
              &apos;Internet/Mobile Transactions AND&apos; + &apos; Recurring Charges&apos;,
               if(AND(transbyMailorTelephone__c,  alertCHMailOPhone__c , transRecurr__c,  AlertChRecuring__c ),
                   &apos;Mail/Phone Orders AND &apos; + &apos; Recurring Charges&apos;,
                  if(AND(transbyInternetMobile__c,  alertCHInternetMobile__c ), &apos;Internet/Mobile Transactions&apos;,
                     if(AND(transbyMailorTelephone__c,  alertCHMailOPhone__c ), &apos;Mail/Phone Orders&apos;,
                        if(AND(transRecurr__c,  AlertChRecuring__c ), &apos;Recurring Charges&apos;, &apos; &apos;)))
                                                                     ))))</formula>
        <label>Charge description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisClosureSt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisClosureStatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalTime__c</fullName>
        <formula>If(Value(Left(transLocalTime__c, Find(&quot;:&quot;,transLocalTime__c)-1))&lt;12, Left(transLocalTime__c, LEN(transLocalTime__c)-3) + &quot; AM&quot;, 
  if( Value(Left(transLocalTime__c, Find(&quot;:&quot;,transLocalTime__c)-1))&lt;13, Left(transLocalTime__c, LEN(transLocalTime__c)-3) + &quot; PM&quot;,
    if((Value(Left(transLocalTime__c, Find(&quot;:&quot;,transLocalTime__c)-1))-12)&lt;10, 
      &quot;0&quot; + Text(Value(Left(transLocalTime__c, Find(&quot;:&quot;,transLocalTime__c)-1))-12) + Mid(transLocalTime__c, Find(&quot;:&quot;, transLocalTime__c), 
                               Find(&quot;:&quot;, Right(transLocalTime__c, len(transLocalTime__c)-Find(&quot;:&quot;,transLocalTime__c)))) + &quot; PM&quot;,
        Text(Value(Left(transLocalTime__c, Find(&quot;:&quot;,transLocalTime__c)-1))-12) + Mid(transLocalTime__c, Find(&quot;:&quot;, transLocalTime__c), 
                               Find(&quot;:&quot;, Right(transLocalTime__c, len(transLocalTime__c)-Find(&quot;:&quot;,transLocalTime__c)))) + &quot; PM&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocalTime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <label>Member Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdsCreateDateTime__c</fullName>
        <label>OdsCreateDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OdsKey__c</fullName>
        <label>OdsKey</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>alertCHInternetMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>alertCHInternetMobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alertCHMailOPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>alertCHMailOPhone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alertTransOverAmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>alertTransOverAmt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>emailAddress__c</fullName>
        <label>emailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>merchantname__c</fullName>
        <label>merchantname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transAmount1__c</fullName>
        <formula>text(floor(transAmount__c))+ &quot;.&quot; + 
  if((transAmount__c-floor(transAmount__c))&lt;0.1, 
       &apos;0&apos;+ text((transAmount__c-floor(transAmount__c))*100),
         text((transAmount__c-floor(transAmount__c))*100))</formula>
        <label>transAmount1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transAmount__c</fullName>
        <label>transAmount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>transAmtAlert1__c</fullName>
        <formula>text(floor(transAmtAlert__c ))+ &quot;.&quot; + 
  if((transAmtAlert__c-floor(transAmtAlert__c))&lt;0.1, 
       &apos;0&apos;+ text((transAmtAlert__c-floor(transAmtAlert__c))*100),
         text((transAmtAlert__c-floor(transAmtAlert__c))*100))</formula>
        <label>transAmtAlert1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transAmtAlert__c</fullName>
        <label>transAmtAlert</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>transCountry__c</fullName>
        <description>Country where transaction originated</description>
        <label>transCountry</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transDate__c</fullName>
        <label>transDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>transLocalDate__c</fullName>
        <description>Transaction Local TMZ Date</description>
        <label>transLocalDate</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transLocalTime__c</fullName>
        <description>Transaction Local TMZ Time</description>
        <label>transLocalTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transOutUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>transOutUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>transRecurr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recurring Transactions (Alert Type)</description>
        <label>transRecurr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>transbyChannel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Transaction By Channel (Alert Type)</description>
        <label>transbyChannel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>transbyInternetMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internet/Mobile Transactions(Alert Type)</description>
        <label>transbyInternetMobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>transbyMailorTelephone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mail/Telephone Channels (Alert Type)</description>
        <label>transbyMailorTelephone</label>
        <type>Checkbox</type>
    </fields>
    <label>MasterCard Alerts</label>
    <listViews>
        <fullName>Alerts_All</fullName>
        <columns>NAME</columns>
        <columns>OdsKey__c</columns>
        <columns>Member_Number__c</columns>
        <columns>Card_Number__c</columns>
        <columns>emailAddress__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>merchantname__c</columns>
        <columns>transAmount__c</columns>
        <columns>transAmtAlert__c</columns>
        <columns>alertTransOverAmt__c</columns>
        <columns>transCountry__c</columns>
        <columns>transLocalDate__c</columns>
        <columns>transLocalTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>transAmount__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Alerts All</label>
    </listViews>
    <listViews>
        <fullName>Disclosures</fullName>
        <columns>NAME</columns>
        <columns>OdsKey__c</columns>
        <columns>Member_Number__c</columns>
        <columns>Card_Number__c</columns>
        <columns>emailAddress__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>merchantname__c</columns>
        <columns>transAmount__c</columns>
        <columns>transAmtAlert__c</columns>
        <columns>transCountry__c</columns>
        <columns>BrandName__c</columns>
        <columns>transLocalDate__c</columns>
        <columns>transLocalTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>transAmount__c</field>
            <operation>equals</operation>
        </filters>
        <label>Disclosures</label>
    </listViews>
    <nameField>
        <displayFormat>MCA{00000000}</displayFormat>
        <label>Mastercard_Alerts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MasterCard Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>